# boom-protocol

./: .gitignore  Anchor.toml  Cargo.toml  DEV_DIARY.md  README.md  TOKENOMICS.md  package-lock.json  package.json
bot/: .env.example  README.md  config.py  monitor.py  price_feed.py  requirements.txt  solana_client.py
frontend/: README.md  next.config.ts  package-lock.json  package.json
frontend/.chart-data/: Bk3Yc8iyvSBCCgUwJh672Pdk8vxskYpFTN6zjErzByr8.json  DemoPool1234567890abcdef.json
frontend/app/: globals.css  layout.tsx  page.tsx  polyfills.ts  providers.tsx
frontend/components/: AdminPanel.tsx  BoomLogo.tsx  BuySellPanel.tsx  ClaimPayout.tsx  CountdownTimer.tsx  DexScreenerWidget.tsx  ExplosionOverlay.tsx  ExplosionStatus.tsx  Header.tsx  Holdings.tsx  PastLaunches.tsx  PresalePanel.tsx  RecentExplosions.tsx  RoundSelector.tsx  TradingChart.tsx  WalletButton.tsx  WalletNotInstalled.tsx  index.ts
mockups/: index.html  prompts.json
programs/boom/: Cargo.toml
programs/boom-hook/: Cargo.toml
programs/boom-hook/src/: lib.rs
programs/boom/src/: lib.rs  presale.rs  vrf.rs
scripts/: atomic-launch.ts  auto-next-round.ts  chart-indexer.ts  check-and-init-hook.ts  check-presale.ts  check-round.ts  create-fluxbeam-lp.ts  create-lp-custom.ts  create-lp-proper.ts  create-lp-with-whitelist.ts  create-lp.ts  create-pool-and-swap.ts  create-raydium-cpmm-simple.ts  create-raydium-cpmm.ts  create-simple-lp.ts  create-token-with-hook.ts  create-token-with-lp.ts  create-token.ts  create-tradable-token.ts  deposit-to-pool-fixed.ts  deposit-to-pool.ts  deposit.ts  disable-auto-advance.ts  end-presale.ts  finalize-round-11.ts  find-pools.ts  fix-create-pool.ts  full-cycle-test.ts  full-lp-test.ts  full-test.ts  init-anchor.js  init-extra-metas-simple.ts  init-extra-metas.ts  init-hook-correct.ts  init-hook-whitelist.ts  init-protocol.ts  init-sequencer.ts  init-simple.js  list-rounds.ts  phase2-only.ts  (+24 more)
(+13 files in other folders)
