[package]
name = "boom-hook"
version = "0.1.0"
description = "Transfer hook for BOOM Protocol - restricts transfers to pools"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boom_hook"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
spl-transfer-hook-interface = "0.6"
spl-tlv-account-resolution = "0.6"
solana-program = "1.18"
