[package]
name = "boom"
version = "0.1.0"
description = "AI-launched tokens with hidden explosion market caps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boom"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
