[package]
name = "boom"
version = "0.1.0"
description = "AI-launched tokens with hidden explosion market caps"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "boom"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022"] }
pyth-solana-receiver-sdk = "0.4.0"
